--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -2,5 +2,8 @@
     Todo listo para trabajar con websockets
 </div>
 
+<p id="message"></p>
+
+<script src="//cdn.jsdeliver.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
