--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -4,6 +4,6 @@
 
 <p id="message"></p>
 
-<script src="//cdn.jsdeliver.net/npm/sweetalert2@11"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+<script src="http://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="http:/socket.io/socket.io.js"></script>
+<script type="application/json" src="/js/index.js"></script>
